Most issues resolved. Changed from HK2 to Weld. Weld Shutdown issues left to be solved.