@@ -13,6 +13,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.version>1.0.0-SNAPSHOT</project.version>
         <maven.compiler.release>25</maven.compiler.release>
+        <maven.compiler.target>25</maven.compiler.target>
         <maven.version>3.9.11</maven.version>
         <java.version>25</java.version>
         <jetty.version>12.1.0.beta2</jetty.version>
@@ -23,7 +24,7 @@
 
     <modules>
         <module>core</module>
-        <!-- <module>rest</module> -->
+        <module>rest</module>
     </modules>
 
     <repositories>
@@ -42,6 +43,11 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>org.conscrypt</groupId>
+                <artifactId>conscrypt-openjdk-uber</artifactId>
+                <version>2.5.2</version>
+            </dependency>
             <!-- Jetty dependencies -->
             <dependency>
                 <groupId>org.eclipse.jetty.ee11</groupId>
@@ -49,6 +55,11 @@
                 <version>12.1.0.beta2</version>
             </dependency>
             <!-- Jakarta dependencies -->
+            <dependency>
+                <groupId>jakarta.el</groupId>
+                <artifactId>jakarta.el-api</artifactId>
+                <version>6.0.1</version>
+            </dependency>
             <dependency>
                 <groupId>jakarta.enterprise</groupId>
                 <artifactId>jakarta.enterprise.cdi-api</artifactId>
@@ -61,6 +72,12 @@
                 <scope>provided</scope>
             </dependency>
             <dependency>
+                <groupId>jakarta.ws.rs</groupId>
+                <artifactId>jakarta.ws.rs-api</artifactId>
+                <version>4.0.0</version>
+            </dependency>
+            <!-- Jetty -->
+            <dependency>
                 <groupId>org.eclipse.jetty</groupId>
                 <artifactId>jetty-bom</artifactId>
                 <version>${jetty.version}</version>
@@ -68,9 +85,14 @@
                 <scope>import</scope>
             </dependency>
             <dependency>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-http</artifactId>
+                <version>${jetty.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>org.eclipse.jetty.ee11</groupId>
                 <artifactId>jetty-ee11-bom</artifactId>
-                <version>12.1.0.beta2</version>
+                <version>${jetty.version}</version>
                 <type>pom</type>
             </dependency>
             <!-- Jersy dependencies -->
@@ -102,6 +124,11 @@
                 <artifactId>weld-se-core</artifactId>
                 <version>${weld.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.glassfish.jaxb</groupId>
+                <artifactId>jaxb-runtime</artifactId>
+                <version>4.0.5</version>
+            </dependency>
             <!-- Security dependencies -->
             <dependency>
                 <groupId>org.bouncycastle</groupId>
@@ -116,6 +143,11 @@
             </dependency>
             <!--  Logging dependencies -->
             <dependency>
+                <groupId>org.jboss.logging</groupId>
+                <artifactId>jboss-logging</artifactId>
+                <version>3.6.1.Final</version>
+            </dependency>
+            <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
                 <version>2.0.17</version>
@@ -129,6 +161,27 @@
                 <groupId>org.fusesource.jansi</groupId>
                 <artifactId>jansi</artifactId>
                 <version>2.4.2</version>
+            </dependency>
+            <!-- Jackson dependencies -->
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-annotations</artifactId>
+                <version>2.19.2</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-core</artifactId>
+                <version>2.19.2</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>2.19.2</version>
+            </dependency>
+            <dependency>
+                <groupId>org.glassfish.jersey.media</groupId>
+                <artifactId>jersey-media-json-jackson</artifactId>
+                <version>${jersey.version}</version>
             </dependency>
             <!-- Yaml-->
             <dependency>
@@ -176,6 +229,13 @@
                         <includeProjectDependencies>true</includeProjectDependencies>
                         <addResourcesToClasspath>true</addResourcesToClasspath>
                         <classpathScope>test</classpathScope>
+                        <systemProperties>
+                            <projectProperties />
+                            <systemProperty>
+                                <key>PMD_JAVA_OPTS</key>
+                                <value>--enable-preview</value>
+                            </systemProperty>
+                        </systemProperties>
                     </configuration>
                 </plugin>
                 <!-- Maven plugins -->
@@ -229,11 +289,10 @@
                                 <failOnWarning>true</failOnWarning>
                                 <verbose>true</verbose>
                                 <ignoredDependencies>
-                                    <!-- org.jboss.weld.servlet:weld-servlet-core:jar:*, -->
-                                    org.eclipse.jetty:jetty-alpn-conscrypt-server:jar:*,org.fusesource.jansi:jansi:jar:*,ch.qos.logback:logback-classic:jar:*,
-                                    org.slf4j:slf4j-api:jar:*,org.apache.maven:maven-compat:*,org.apache.maven.resolver:maven-resolver-connector-basic,
-                                    org.apache.maven.resolver:maven-resolver-transport-wagon,org.apache.maven.wagon:wagon-http-lightweight:*
-                                    </ignoredDependencies>
+                                    org.glassfish.jersey.inject:jersey-cdi2-se:jar:*,org.eclipse.jetty:jetty-alpn-conscrypt-server:jar:*,org.fusesource.jansi:jansi:jar:*,ch.qos.logback:logback-classic:jar:*,
+                                    org.slf4j:slf4j-api:jar:*,org.apache.maven:maven-compat:*,org.apache.maven.resolver:maven-resolver-connector-basic,org.glassfish.jaxb:jaxb-runtime:jar:*,com.rapidapi:rest:jar:*,
+                                    org.apache.maven.resolver:maven-resolver-transport-wagon,org.apache.maven.wagon:wagon-http-lightweight:*,jakarta.xml.bind:jakarta.xml.bind-api:jar:*,jakarta.activation:jakarta.activation-api:jar:*,org.glassfish.jersey.media:jersey-media-json-jackson:jar:*
+                                </ignoredDependencies>
                             </configuration>
                         </execution>
                     </executions>
@@ -323,7 +382,16 @@
                     <artifactId>maven-pmd-plugin</artifactId>
                     <version>3.27.0</version>
                     <configuration>
+                        <printFailingErrors>true</printFailingErrors>
+                        <targetJdk>${maven.compiler.target}</targetJdk>
                         <verbose>true</verbose>
+                        <excludes>
+                            <!--<exclude>**/*Bean.java</exclude>-->
+                            <!--<exclude>**/generated/*.java</exclude>-->
+                        </excludes>
+                        <excludeRoots>
+                            <!--<excludeRoot>target/generated-sources/stubs</excludeRoot>-->
+                        </excludeRoots>
                     </configuration>
                     <executions>
                         <execution>
@@ -334,6 +402,13 @@
                             <phase>verify</phase>
                         </execution>
                     </executions>
+                    <dependencies>
+                        <dependency>
+                            <groupId>net.sourceforge.pmd</groupId>
+                            <artifactId>pmd-java</artifactId>
+                            <version>7.16.0</version>
+                        </dependency>
+                    </dependencies>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
